added insertdoc with openapi
